# vulkanbarycentrictest

./: CMakeLists.txt  LICENSE  README.md  triangle.frag.glsl  triangle.vert.glsl  vulkanbarycentrictest.c
